fix: improve certificate visibility in modal

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -855,7 +855,7 @@ body {
     }
 
     .full-cert-img {
-        max-height: 60vh;
+        max-height: 80vh;
         max-width: 95vw;
     }
 
